--- a/task 2_4.html
+++ b/task 2_4.html
@@ -17,37 +17,37 @@
         console.log(`Необходимо вывести числа в диапазоне [${a}:15]`);
         switch (a) {
             case 0:
-                console.log(0);
+                console.log(a++);
             case 1:
-                console.log(1);
+                console.log(a++);
             case 2:
-                console.log(2);
+                console.log(a++);
             case 3:
-                console.log(3);
+                console.log(a++);
             case 4:
-                console.log(4);
+                console.log(a++);
             case 5:
-                console.log(5);
+                console.log(a++);
             case 6:
-                console.log(6);
+                console.log(a++);
             case 7:
-                console.log(7);
+                console.log(a++);
             case 8:
-                console.log(8);
+                console.log(a++);
             case 9:
-                console.log(9);
+                console.log(a++);
             case 10:
-                console.log(10);
+                console.log(a++);
             case 11:
-                console.log(11);
+                console.log(a++);
             case 12:
-                console.log(12);
+                console.log(a++);
             case 13:
-                console.log(13);
+                console.log(a++);
             case 14:
-                console.log(14);
+                console.log(a++);
             case 15:
-                console.log(15);
+                console.log(a);
         }
     </script>
 
