--- a/task 5_2.html
+++ b/task 5_2.html
@@ -15,7 +15,7 @@
 
 <body>
     <div id=basket></div>
-    <button id=batton></button>
+    <button id=button>Очистить корзину</button>
     <script src="js/basket.js"></script>
 
 </html>
