--- a/task 6_1.html
+++ b/task 6_1.html
@@ -14,7 +14,10 @@ b. Привязать к событию покупки товара пересч
 </head>
 
 <body>
+    <h3>Каталог</h3>
     <div id=catalog></div>
+    <br>
+    <h3>Корзина</h3>
     <div id=basket></div>
     <button id=button>Очистить корзину</button>
 
