По заданию 1 добавлены:  в task 7_1_2.html стр: 14 в js.js стр: 168, 174, 203 По заданию 2 добавлены в js.js стр: 90, 112-117, 122-141, 255, 292, 297, 310, 419.

--- a/task 7_1_2.html
+++ b/task 7_1_2.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <p id="score" class="scoreString">Счет в игре: 0</p>
     <div id="game-wrap">
         <table id="game"></table>
     </div>
